{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 25,
  "lineage": "25be7751-efc5-a20f-39a9-2dbcf8a77ead",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047aad752a426ed48",
            "arn": "arn:aws:ec2:eu-west-1:557273839517:instance/i-036e2b4ad18a77241",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-036e2b4ad18a77241",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e22e5466439c7dbf",
            "private_dns": "ip-10-0-12-78.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.78",
            "public_dns": "ec2-34-244-19-193.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.244.19.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-west-1:557273839517:key/f93b026e-911f-45d5-a846-42c2890a1f8b",
                "throughput": 0,
                "volume_id": "vol-0d44c5ae499dc2e3f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0679e206891b8dabf",
            "tags": {
              "company": "Dma.Inc",
              "project": "Dma.Inc-DevOps Project"
            },
            "tags_all": {
              "company": "Dma.Inc",
              "project": "Dma.Inc-DevOps Project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-035f53079951ae4a1"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557273839517:internet-gateway/igw-0879c4189c4127c1b",
            "id": "igw-0879c4189c4127c1b",
            "owner_id": "557273839517",
            "tags": {
              "company": "Dma.Inc",
              "project": "Dma.Inc-DevOps Project"
            },
            "tags_all": {
              "company": "Dma.Inc",
              "project": "Dma.Inc-DevOps Project"
            },
            "vpc_id": "vpc-06bd7afed71e2cab6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557273839517:route-table/rtb-081dd9dacbeefb321",
            "id": "rtb-081dd9dacbeefb321",
            "owner_id": "557273839517",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0879c4189c4127c1b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "company": "Dma.Inc",
              "project": "Dma.Inc-DevOps Project"
            },
            "tags_all": {
              "company": "Dma.Inc",
              "project": "Dma.Inc-DevOps Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bd7afed71e2cab6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064476e92a6932e83",
            "route_table_id": "rtb-081dd9dacbeefb321",
            "subnet_id": "subnet-0679e206891b8dabf"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557273839517:security-group/sg-035f53079951ae4a1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035f53079951ae4a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "557273839517",
            "revoke_rules_on_delete": false,
            "tags": {
              "company": "Dma.Inc",
              "project": "Dma.Inc-DevOps Project"
            },
            "tags_all": {
              "company": "Dma.Inc",
              "project": "Dma.Inc-DevOps Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bd7afed71e2cab6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557273839517:subnet/subnet-0679e206891b8dabf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.12.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0679e206891b8dabf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "557273839517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "company": "Dma.Inc",
              "project": "Dma.Inc-DevOps Project"
            },
            "tags_all": {
              "company": "Dma.Inc",
              "project": "Dma.Inc-DevOps Project"
            },
            "vpc_id": "vpc-06bd7afed71e2cab6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:557273839517:vpc/vpc-06bd7afed71e2cab6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.12.0/24",
            "default_network_acl_id": "acl-0a32877e9abcae424",
            "default_route_table_id": "rtb-044b95c19a892e1ab",
            "default_security_group_id": "sg-0910826379e600f31",
            "dhcp_options_id": "dopt-046ac81f9a144fc53",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06bd7afed71e2cab6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-044b95c19a892e1ab",
            "owner_id": "557273839517",
            "tags": {
              "company": "Dma.Inc",
              "project": "Dma.Inc-DevOps Project"
            },
            "tags_all": {
              "company": "Dma.Inc",
              "project": "Dma.Inc-DevOps Project"
            }
          }
        }
      ]
    }
  ]
}